<resources>
    <string name="app_name">Ayo Jaki</string>

    <string name="no_internet">No Internet Available!</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="hint_email">Email Pengguna</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_confirm_password">Ulangi Kata Sandi</string>
    <string name="hint_keterangan">Keterangan</string>

    <string name="btn_link_to_register">Buat akun baru</string>
    <string name="btn_link_to_login">Login sekarang</string>
    <string name="btn_link_to_forget">Lupa password</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_sign_up">Daftar</string>

    <string name="warning_minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="imageview_description">The imageview that contains the emojified picture</string>

    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Map</string>
    <string name="title_profile">Profile</string>
</resources>
